# Pi4-AI

./: CMakeLists.txt  README.md
libs/ncnn/include/ncnn/: platform.h
libs/ncnn/lib/: libncnn.so.1  libncnn.so.1.0.20210621
libs/ncnn/lib/cmake/ncnn/: ncnn-release.cmake
libs/opencv/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
libs/opencv/lib/: libopencv_img_hash.so.4.1.2
libs/opencv/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake
src/: main.cpp
src/Core/ApiSupport/: FileIO.hpp
src/Core/Framework/ncnn/: Detector.hpp
